--- a/index.html
+++ b/index.html
@@ -186,9 +186,7 @@
                     //Grabs addresses from input text
                     function grabAddress(){
                       var start = document.getElementById("start").value;
-                      var end = document.getElementById("end").value;
-                      var latStrt;
-                      var lngStrt;
+                      var end = document.getElementById("end").value;                  
                       var latEnd;
                       var lngEnd;
                       var startAddy;
@@ -203,12 +201,7 @@
                       //START INPUT
                       //Check if it has a left bracket indicating the user pasted lat lng
                       if(start.charAt(0) == '{'){
-                        const latlngStrt = start.split(",",2);
-                        if(latlngStrt[0].substring(0,1) == "4")latStrt = latlngStrt[0];
-                        else latStrt = latlngStrt[0].substring(8);
-                        if(latlngStrt[1].substring(0,2) == "-8") lngStrt = latlngStrt[1];
-                        else lngStrt = latlngStrt[1].substring(7,latlngStrt[1].length-1);
-                        const latlngS = latStrt + "," + lngStrt;
+                        var latlngS = chop(start);
                         //alert(latlngS);
                         //getGeocode(startCoord);    https://maps.googleapis.com/maps/api/geocode/json?latlng=40.714224,-73.961452&key=YOUR_API_KEY
                         axios.get('https:maps.googleapis.com/maps/api/geocode/json',{
@@ -229,7 +222,7 @@
                           console.log("UPDATE " + st);
                           findS = searchAddress(st);
                           if(findS == undefined)alert("Starting Address: (" + st + ") is not found or within range");
-                          else alert("Starting Address Found!");
+                          //else alert("Starting Address Found!");
                         })
                         .catch(function(error){
                           console.log(error);
@@ -238,12 +231,7 @@
 
                       //END INPUT
                       if(end.charAt(0) == '{'){
-                        const latlngEnd = end.split(",",2);
-                        if(latlngEnd[0].substring(0,1) == "4")latEnd = latlngEnd[0];
-                        else latEnd = latlngEnd[0].substring(8);
-                        if(latlngEnd[1].substring(0,2) == "-8") lngEnd = latlngEnd[1];
-                        else lngEnd = latlngEnd[1].substring(7,latlngEnd[1].length-1);
-                        const latlngE = latEnd + "," + lngEnd;
+                        var latlngE = chop(end);
                         axios.get('https:maps.googleapis.com/maps/api/geocode/json',{
                           params:{
                             latlng: latlngE,
@@ -265,15 +253,13 @@
                           console.log("UPDATE " + st);
                           findE = searchAddress(st);
                           if(findE == undefined)alert("Ending Address: (" + st + ") is not found or within range");
-                          else alert("Ending Address Found!");
+                          //else alert("Ending Address Found!");
                         })
                         .catch(function(error){
                           console.log(error);
                         });
                       }   
                       if(start.charAt(0) != '{' && end.charAt(0) != '{'){
-                        document.getElementById('test').innerHTML = start;
-                        document.getElementById('test2').innerHTML = end;
                         var findS = searchAddress(start);
                         var findE = searchAddress(end);
                         //NEED TO CONVERT INTERSECTIONS[] ID TO FULL BLOCK ST NAME
@@ -281,9 +267,21 @@
                         if(findS === undefined && findE === undefined)alert("Starting and Ending locations are not found or within range.");
                         else if(findS == undefined)alert("Starting location is not found or within range");
                         else if(findE == undefined)alert("Ending location is not found or within range");
-                        else alert(findS + ' ' + findE);
+
+                        document.getElementById('test').innerHTML = start;
+                        document.getElementById('test2').innerHTML = end;
+                        //else alert(findS + ' ' + findE);
                       }              
                       //alert(start + ' ' + end);
+                    }
+
+                    function chop(coord){
+                      var lat;
+                      var lng;
+                      const latlng = coord.split(",",2);
+                      if(latlng[0].substring(0,1) == "4")lat = latlng[0];
+                      if(latlng[1].substring(0,2) == "-8") lng = latlng[1];
+                      return lat + "," + lng;
                     }
 
                    /* function checkAddress(){
