--- a/index.html
+++ b/index.html
@@ -279,8 +279,8 @@
                       var lat;
                       var lng;
                       const latlng = coord.split(",",2);
-                      if(latlng[0].substring(0,1) == "4")lat = latlng[0];
-                      if(latlng[1].substring(0,2) == "-8") lng = latlng[1];
+                      lat = latlng[0].substring(8);
+                      lng = latlng[1].substring(7,latlng[1].length-1);
                       var chopped = lat + "," + lng;
                       return chopped;
                     }
