--- a/index.html
+++ b/index.html
@@ -187,20 +187,10 @@
                     function grabAddress(){
                       var start = document.getElementById("start").value;
                       var end = document.getElementById("end").value;                  
-                      var latEnd;
-                      var lngEnd;
-                      var startAddy;
-                      var endAddy;
-                      var startOutput;
-                      var endOutput;
-                      var checkStart = "";
-                      var checkEnd = "";
-                      var findS;
-                      var findE;
 
                       //START INPUT
                       //Check if it has a left bracket indicating the user pasted lat lng
-                      if(start.charAt(0) == '{'){
+                      if(start.charAt(0) == '{' && end.charAt(0) == '{'){
                         var latlngS = chop(start);
                         //alert(latlngS);
                         //getGeocode(startCoord);    https://maps.googleapis.com/maps/api/geocode/json?latlng=40.714224,-73.961452&key=YOUR_API_KEY
@@ -211,17 +201,44 @@
                           }
                         })
                         .then(function(response){                        
-                          startAddy = response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name;
+                          var startAddy = response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name;
                           console.log("Found Start LatLng :" + startAddy);
-                          startOutput = `${startAddy} `;
+                          var startOutput = `${startAddy} `;
                           document.getElementById('test').innerHTML = startOutput;
-                          checkStart = document.getElementById('test');
+                          var checkStart = document.getElementById('test');
                           var temp = checkStart.outerHTML;
                           console.log("TEST " + temp);
                           var st = temp.substring(17,temp.length-9);
                           console.log("UPDATE " + st);
-                          findS = searchAddress(st);
-                          if(findS == undefined)alert("Starting Address: (" + st + ") is not found or within range");
+                          var findS = searchAddress(st);
+
+                      //END INPUT
+                          var latlngE = chop(end);
+                          axios.get('https:maps.googleapis.com/maps/api/geocode/json',{
+                            params:{
+                              latlng: latlngE,
+                              key:'AIzaSyDXv29cjGoYgAy0VD5MVexGcdlXwd0eohg'
+                            }
+                          })
+                          .then(function(response){
+                            var endAddy = response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name;
+                            console.log("Found End LatLng :" + endAddy);  
+                            var endOutput = `${endAddy}`;
+                            document.getElementById('test2').innerHTML = endOutput;
+                            var checkEnd = document.getElementById('test2');
+                            var temp2 = checkEnd.outerHTML;
+                            console.log("TEST " + temp2);
+                            var st2 = temp2.substring(18,temp2.length-8);
+                            console.log("UPDATE " + st2);
+                            var findE = searchAddress(st2);
+                          })
+                          .catch(function(error){
+                            console.log(error);
+                          });
+                          
+                          if(findS == undefined && findE == undefined)alert("Starting Address: (" + st + ") and Ending Address: (" + st2 + ") is not found or within range");
+                          else if(findS == undefined)alert("Starting Address: (" + st + ") is not found or within range");
+                          else if(findE == undefined)alert("Ending Address: (" + st2 + ") is not found or within range");
                           //else alert("Starting Address Found!");
                         })
                         .catch(function(error){
@@ -230,7 +247,7 @@
                       }
 
                       //END INPUT
-                      if(end.charAt(0) == '{'){
+                /*      if(end.charAt(0) == '{'){
                         var latlngE = chop(end);
                         axios.get('https:maps.googleapis.com/maps/api/geocode/json',{
                           params:{
@@ -241,24 +258,24 @@
                         .then(function(response){
                           //console.log(response);
                           //formatted address
-                          endAddy = response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name;
+                          var endAddy = response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name;
                           //alert(response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name);
                           console.log("Found End LatLng :" + endAddy);  
-                          endOutput = `${endAddy}`;
+                          var endOutput = `${endAddy}`;
                           document.getElementById('test2').innerHTML = endOutput;
-                          checkEnd = document.getElementById('test2');
+                          var checkEnd = document.getElementById('test2');
                           var temp = checkEnd.outerHTML;
                           console.log("TEST " + temp);
                           var st = temp.substring(18,temp.length-8);
                           console.log("UPDATE " + st);
-                          findE = searchAddress(st);
+                          var findE = searchAddress(st);
                           if(findE == undefined)alert("Ending Address: (" + st + ") is not found or within range");
                           //else alert("Ending Address Found!");
                         })
                         .catch(function(error){
                           console.log(error);
-                        });
-                      }   
+                        });  
+                      }   */
                       if(start.charAt(0) != '{' && end.charAt(0) != '{'){
                         var findS = searchAddress(start);
                         var findE = searchAddress(end);
@@ -283,6 +300,10 @@
                       lng = latlng[1].substring(7,latlng[1].length-1);
                       var chopped = lat + "," + lng;
                       return chopped;
+                    }
+
+                    function convert(){
+
                     }
 
                    /* function checkAddress(){
