--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
                   <!-- testing js code -->
                   <script> 
                     document.getElementById("enter").addEventListener("click", grabAddress);
+                    //variables for the literal coordinates for the selected start and end locations
                     var startCoord;
                     var endCoord;
                     //Grabs addresses from input text
