--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
               <!-- TESTING DHMAP ADDRESS ARRAY -->
               <label>Start:&nbsp;</label>
               <label id="test"></label>
-              <label margin-left:64px>End:&nbsp;</label>
+              <label style='margin-left:64px'>End:&nbsp;</label>
               <label id="test2"></label>
               <script src="DHMap.js"> </script>
  
