--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                   <!-- testing js code -->
                   <script> 
                     document.getElementById("enter").addEventListener("click", grabAddress);
-                    //variables for the literal coordinates for the selected start and end locations
+         /*           //variables for the literal coordinates for the selected start and end locations
                     var startCoord;
                     var endCoord;
                     //Grabs addresses from input text
@@ -278,7 +278,7 @@
                       lng = latlng[1].substring(7,latlng[1].length-1);
                       var chopped = lat + "," + lng;
                       return chopped;
-                    }
+                    }    */
    
                   </script>
 
