--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
               
                   <!-- testing js code -->
-                  <script> 
+                  <script src="DHmap.js"> 
                     document.getElementById("enter").addEventListener("click", grabAddress);
          /*           //variables for the literal coordinates for the selected start and end locations
                     var startCoord;
