--- a/index.html
+++ b/index.html
@@ -180,9 +180,10 @@
                   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
               
                   <!-- testing js code -->
-                  <script src="DHMap.js"> 
+                  <!-- <script src="DHMap.js"> -->
+                  <script>
                     document.getElementById("enter").addEventListener("click", grabAddress);
-         /*           //variables for the literal coordinates for the selected start and end locations
+                    //variables for the literal coordinates for the selected start and end locations
                     var startCoord;
                     var endCoord;
                     //Grabs addresses from input text
@@ -278,7 +279,7 @@
                       lng = latlng[1].substring(7,latlng[1].length-1);
                       var chopped = lat + "," + lng;
                       return chopped;
-                    }    */
+                    }    
    
                   </script>
 
