--- a/index.html
+++ b/index.html
@@ -180,10 +180,10 @@
                   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
               
                   <!-- testing js code -->
-                  <!-- <script src="DHMap.js"> -->
-                  <script>
+                  <script src="DHMap.js"> 
+                  //<script>
                     document.getElementById("enter").addEventListener("click", grabAddress);
-                    //variables for the literal coordinates for the selected start and end locations
+   /*                 //variables for the literal coordinates for the selected start and end locations
                     var startCoord;
                     var endCoord;
                     //Grabs addresses from input text
@@ -280,7 +280,7 @@
                       var chopped = lat + "," + lng;
                       return chopped;
                     }    
-   
+  */ 
                   </script>
 
               <!-- ADDS JAVASCRIPT FILE TO INDEX.HTML -->
