--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
                   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
               
                   <!-- testing js code -->
-                  <script src="DHMap.js"> 
-                  //<script>
+                  <!-- <script src="DHMap.js"> -->
+                  <script>
                     document.getElementById("enter").addEventListener("click", grabAddress);
    /*                 //variables for the literal coordinates for the selected start and end locations
                     var startCoord;
