--- a/index.html
+++ b/index.html
@@ -175,14 +175,14 @@
                   <input type="text" id="end" name="endTxt" size="20" style="color: black" placeholder="&quot;321 N 4th St&quot;"/>
                  
                   <div></div>
-                  <button class="button button1" id="enter">Enter Address</button>
+                  <button class="button button1" id="enter" onclick="grabAddress()">Enter Address</button>
 
                   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
               
                   <!-- testing js code -->
                   <!-- <script src="DHMap.js"> -->
                   <script>
-                    document.getElementById("enter").addEventListener("click", grabAddress);
+                    //document.getElementById("enter").addEventListener("click", grabAddress);
    /*                 //variables for the literal coordinates for the selected start and end locations
                     var startCoord;
                     var endCoord;
