--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 
                 
                 <h1>Google Maps API Web App</h1>
-                <p>This project is designed to create a custom map route that will find the most <u>consistant downhill</u> route, avoiding as much uphill travel as possible. The custom routes are decided by inputting the desired starting and ending addresses within the given range. The idea is to calculate a route that will provide the best cruising experience while getting the user to the requested destination.</p>
+                <p>This project is designed to create a custom map route that will find the most <u>consistent downhill</u> route, avoiding as much uphill travel as possible. The custom routes are decided by inputting the desired starting and ending addresses within the given range. The idea is to calculate a route that will provide the best cruising experience while getting the user to the requested destination.</p>
                 <p>APIs Used: Google - Maps JavaScript, Maps Elevation, and Geocoding</p>
                 <h2 id="pattern-layout">Enter Data:</h2>
                 <p>You can either manually type the address in this format: <b><q>123 N Something St</q>.</b></p>
