--- a/index.html
+++ b/index.html
@@ -183,7 +183,8 @@
               <label id="test"></label>
               <label style='margin-left:64px'>End:&nbsp;</label>
               <label id="test2"></label>
-              
+
+              <label id="path"></label>
 
                <!-- ADDS JAVASCRIPT FILE TO INDEX.HTML -->
               <!-- CREATES MAP AND ADDRESS INPUT PLUS BUTTONS -->
