--- a/index.html
+++ b/index.html
@@ -179,13 +179,6 @@
 
                   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
-              <label>Start:&nbsp;</label>
-              <label id="test"></label>
-              <label style='margin-left:64px'>End:&nbsp;</label>
-              <label id="test2"></label>
-
-              <label id="path"></label>
-
                <!-- ADDS JAVASCRIPT FILE TO INDEX.HTML -->
               <!-- CREATES MAP AND ADDRESS INPUT PLUS BUTTONS -->
               <script type="module" src="map.js"> </script>
@@ -193,6 +186,13 @@
 
               <!-- ADDS JAVASCRIPT FILE TO INDEX.HTML -->
               <script src="DHMap.js"> </script>
+
+              <label>Start:&nbsp;</label>
+              <label id="test"></label>
+              <label style='margin-left:64px'>End:&nbsp;</label>
+              <label id="test2"></label>
+              <div></div>
+              <label id="path"></label>
  
             </article>
           </div>
