--- a/index.html
+++ b/index.html
@@ -174,9 +174,9 @@
                   <label for="end">Ending Address:&nbsp;&nbsp;</label>
                   <input type="text" id="end" name="endTxt" size="20" style="color: black" placeholder="&quot;321 N 4th St&quot;"/>
                  
-                  <div></div>
+                  <div>
                   <button class="button button1" id="enter" onclick="grabAddress()">Enter</button>
-
+                  </div>
                   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
                <!-- ADDS JAVASCRIPT FILE TO INDEX.HTML -->
