--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                   <div></div>
                   <label for="end">Ending Address:&nbsp;&nbsp;</label>
                   <input type="text" id="end" name="endTxt" size="20" style="color: black" placeholder="&quot;321 N 4th St&quot;"/>
-
+                  <div></div>
                   <button class="button button1" id="enter" onclick="grabAddress()">Enter</button>
 
                   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
