--- a/index.html
+++ b/index.html
@@ -160,12 +160,12 @@
                 
                 
                 <h1>Google Maps API Web App</h1>
-                <p>This project is designed to create a custom map route that will find the most <u>consistent downhill</u> route, avoiding as much uphill travel as possible. The custom routes are decided by inputting the desired starting and ending addresses within the given range. The idea is to calculate a route that will provide the best cruising experience while getting the user to the requested destination.</p>
+                <p>This project is designed to create a custom map route that will find the most <u>downhill</u> route, avoiding as much uphill travel as possible. The custom routes are decided by inputting the desired starting and ending addresses within the given range. The idea is to calculate a route that will provide the best cruising experience while getting the user to the requested destination.</p>
                 <p>APIs Used: Google - Maps JavaScript, Maps Elevation, and Geocoding</p>
                 <h2 id="pattern-layout">Enter Data:</h2>
                 <p>You can either manually type the address in this format: <b><q>123 N Something St</q>.</b></p>
                 <p><b>OR</b></p> 
-                <p>You can click the position on the map, copy the <u>full coordinates</u> (including - <b>{"lat":... , "lng":...}</b> ) in the pop up window, then paste them into Start/End boxes.</p>
+                <p>You can click the position on the map, copy the coordinates in the pop up window, then paste them into Start/End boxes.</p>
   
                 <!-- Creates text and then an input for text -->
                   <label for="start">Starting Address:</label>
@@ -191,7 +191,7 @@
               <label style='margin-left:64px'>End:&nbsp;</label>
               <label id="test2"></label>
               <div></div>
-              <label id="path"></label>
+              <label id="path">Path:</label>
  
             </article>
           </div>
