--- a/index.html
+++ b/index.html
@@ -176,6 +176,10 @@
                   <div></div>
                   <button class="button button1" id="enter" onclick="grabAddress()">Enter</button>
 
+                  <script>
+                    console.log(document.getElementById("path").value);
+                  </script>
+
                   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
                <!-- ADDS JAVASCRIPT FILE TO INDEX.HTML -->
