--- a/index.html
+++ b/index.html
@@ -191,7 +191,8 @@
               <label style='margin-left:64px'>End:&nbsp;</label>
               <label id="test2"></label>
               <div></div>
-              <label id="path">Path:</label>
+              <label>Path:</label>
+              <label id="path"></label>
  
             </article>
           </div>
