--- a/index.html
+++ b/index.html
@@ -193,6 +193,8 @@
               <div></div>
               <label>Path:</label>
               <label id="path"></label>
+              <div></div>
+              <button class="button button1" id="route" onclick="createRoute()">Map Route</button>
  
             </article>
           </div>
