--- a/index.html
+++ b/index.html
@@ -178,13 +178,8 @@
 
                   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
-               <!-- ADDS JAVASCRIPT FILE TO INDEX.HTML -->
-              <!-- CREATES MAP AND ADDRESS INPUT PLUS BUTTONS -->
-              <script type="module" src="map.js"> </script>
+              <!-- CREATES MAP  -->
               <div id="map" style="width:100%;height:400px;"></div>
-
-              <!-- ADDS JAVASCRIPT FILE TO INDEX.HTML -->
-              <script src="DHMap.js"> </script>
 
               <label>Start:&nbsp;</label>
               <label id="test"></label>
@@ -195,6 +190,11 @@
               <label id="path"></label>
               <div></div>
               <button class="button button1" id="route" onclick="createRoute()">Map Route</button>
+              
+              <!-- ADDS JAVASCRIPT FILE TO INDEX.HTML -->
+              <script type="module" src="map.js"> </script>
+              <!-- ADDS JAVASCRIPT FILE TO INDEX.HTML -->
+              <script src="DHMap.js"> </script>
  
             </article>
           </div>
