--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
               <script type="module" src="map.js"> </script>
               <!-- ADDS JAVASCRIPT FILE TO INDEX.HTML -->
               <script src="DHMap.js"> </script>
+              <script src="map.js"></script>
  
             </article>
           </div>
